--- a/landing-page-api/package.json
+++ b/landing-page-api/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^25.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.0",
     "knex": "<0.20.0",
     "pg": "^8.5.1",
     "strapi": "3.4.6",
