--- a/landing-page-api/api/landing-page/models/landing-page.settings.json
+++ b/landing-page-api/api/landing-page/models/landing-page.settings.json
@@ -53,7 +53,7 @@
       "component": "page.section-agenda",
       "required": true
     },
-    "sectionPricingBox": {
+    "pricingBox": {
       "type": "component",
       "repeatable": false,
       "component": "page.section-pricing-box",
