refactor: applying some changings to sections

--- a/landing-page-api/components/page/section-about-project.json
+++ b/landing-page-api/components/page/section-about-project.json
@@ -2,7 +2,8 @@
   "collectionName": "components_page_section_about_projects",
   "info": {
     "name": "sectionAboutProject",
-    "icon": "info-circle"
+    "icon": "info-circle",
+    "description": ""
   },
   "options": {},
   "attributes": {
@@ -14,12 +15,11 @@
       "type": "richtext",
       "required": true
     },
-    "media": {
+    "image": {
       "model": "file",
       "via": "related",
       "allowedTypes": [
-        "images",
-        "videos"
+        "images"
       ],
       "plugin": "upload",
       "required": true
